--- a/src/styles/utilities/_alignment.scss
+++ b/src/styles/utilities/_alignment.scss
@@ -5,16 +5,18 @@
 @mixin align-middle { vertical-align: middle; }
 @mixin align-bottom { vertical-align: bottom; }
 
+@if VAR.$generate-utility-classes {
 .align-baseline { @include align-baseline; }
 .align-top { @include align-top; }
 .align-middle { @include align-middle; }
 .align-bottom { @include align-bottom; }
 
-@each $breakpoint, $width in VAR.$breakpoints {
-    @media (min-width: #{$width}) {
-        .align-baseline\@#{$breakpoint} { @include align-baseline; }
-        .align-top\@#{$breakpoint} { @include align-top; }
-        .align-middle\@#{$breakpoint} { @include align-middle; }
-        .align-bottom\@#{$breakpoint} { @include align-bottom; }
+    @each $breakpoint, $width in VAR.$breakpoints {
+        @media (min-width: #{$width}) {
+            .align-baseline\@#{$breakpoint} { @include align-baseline; }
+            .align-top\@#{$breakpoint} { @include align-top; }
+            .align-middle\@#{$breakpoint} { @include align-middle; }
+            .align-bottom\@#{$breakpoint} { @include align-bottom; }
+        }
     }
 }
