--- a/src/styles/themes/_theme.scss
+++ b/src/styles/themes/_theme.scss
@@ -4,6 +4,7 @@
 @use "../utilities/colors" as COL;
 @use "../abstracts" as *;
 
+@if $generate-utility-classes {
 :root {
   // Theme color CSS variables
   @each $color-name, $scale in COL.$colors {
@@ -85,130 +86,131 @@
 // COLOR UTILITY CLASSES
 // -----------------------------------------------
 
-// Theme color background utilities
-@each $color-name, $scale in COL.$colors {
-  @each $shade, $value in $scale {
-    .bg-#{$color-name}-#{$shade} {
-      background-color: var(--#{$color-name}-#{$shade});
+  // Theme color background utilities
+  @each $color-name, $scale in COL.$colors {
+    @each $shade, $value in $scale {
+      .bg-#{$color-name}-#{$shade} {
+        background-color: var(--#{$color-name}-#{$shade});
+      }
+
+      // Automatic text contrast for backgrounds
+      .text-on-#{$color-name}-#{$shade} {
+        color: COL.find-text-color($value);
+      }
+
+      .text-#{$color-name}-#{$shade} {
+        color: var(--#{$color-name}-#{$shade});
+      }
     }
 
-    // Automatic text contrast for backgrounds
-    .text-on-#{$color-name}-#{$shade} {
-      color: COL.find-text-color($value);
+    // Base color classes
+    .bg-#{$color-name} {
+      background-color: var(--#{$color-name});
     }
 
-    .text-#{$color-name}-#{$shade} {
-      color: var(--#{$color-name}-#{$shade});
-    }
-  }
-
-  // Base color classes
-  .bg-#{$color-name} {
-    background-color: var(--#{$color-name});
-  }
-
-  .text-#{$color-name} {
-    color: var(--#{$color-name});
-  }
-}
-
-// Primitive color utilities
-@each $color-name, $scale in COL.$colors-primitives {
-  @each $shade, $value in $scale {
-    .bg-#{$color-name}-#{$shade} {
-      background-color: var(--#{$color-name}-#{$shade});
-    }
-
-    .text-on-#{$color-name}-#{$shade} {
-      color: COL.find-text-color($value);
-    }
-
-    .text-#{$color-name}-#{$shade} {
-      color: var(--#{$color-name}-#{$shade});
+    .text-#{$color-name} {
+      color: var(--#{$color-name});
     }
   }
 
-  // Base color classes
-  .bg-#{$color-name} {
-    background-color: var(--#{$color-name});
-  }
+  // Primitive color utilities
+  @each $color-name, $scale in COL.$colors-primitives {
+    @each $shade, $value in $scale {
+      .bg-#{$color-name}-#{$shade} {
+        background-color: var(--#{$color-name}-#{$shade});
+      }
 
-  .text-#{$color-name} {
-    color: var(--#{$color-name});
-  }
-}
+      .text-on-#{$color-name}-#{$shade} {
+        color: COL.find-text-color($value);
+      }
 
-// Semantic color utilities
-.bg-page {
-  background-color: var(--background);
-}
-
-.bg-card {
-  background-color: var(--surface);
-}
-
-.bg-active {
-  background-color: var(--button-bg-color);
-}
-
-.bg-hover {
-  background-color: var(--button-bg-color-hover);
-}
-
-.text-default {
-  color: var(--text-primary);
-}
-
-.text-muted {
-  color: var(--text-secondary);
-}
-
-.text-subtle {
-  color: var(--text-secondary);
-  opacity: 0.7;
-}
-
-.text-inverted {
-  color: var(--inverted-text-color);
-}
-
-.bg-white {
-  background-color: white;
-}
-
-.bg-black {
-  background-color: black;
-}
-
-.text-white {
-  color: white;
-}
-
-.text-black {
-  color: black;
-}
-
-// Hover utilities
-@each $color-name, $scale in COL.$colors {
-  @each $shade, $value in $scale {
-    .hover\:bg-#{$color-name}-#{$shade}:hover {
-      background-color: var(--#{$color-name}-#{$shade});
+      .text-#{$color-name}-#{$shade} {
+        color: var(--#{$color-name}-#{$shade});
+      }
     }
 
-    .hover\:text-#{$color-name}-#{$shade}:hover {
-      color: var(--#{$color-name}-#{$shade});
+    // Base color classes
+    .bg-#{$color-name} {
+      background-color: var(--#{$color-name});
+    }
+
+    .text-#{$color-name} {
+      color: var(--#{$color-name});
     }
   }
-}
 
-@each $color-name, $scale in COL.$colors-primitives {
-  @each $shade, $value in $scale {
-    .hover\:bg-#{$color-name}-#{$shade}:hover {
-      background-color: var(--#{$color-name}-#{$shade});
+  // Semantic color utilities
+  .bg-page {
+    background-color: var(--background);
+  }
+
+  .bg-card {
+    background-color: var(--surface);
+  }
+
+  .bg-active {
+    background-color: var(--button-bg-color);
+  }
+
+  .bg-hover {
+    background-color: var(--button-bg-color-hover);
+  }
+
+  .text-default {
+    color: var(--text-primary);
+  }
+
+  .text-muted {
+    color: var(--text-secondary);
+  }
+
+  .text-subtle {
+    color: var(--text-secondary);
+    opacity: 0.7;
+  }
+
+  .text-inverted {
+    color: var(--inverted-text-color);
+  }
+
+  .bg-white {
+    background-color: white;
+  }
+
+  .bg-black {
+    background-color: black;
+  }
+
+  .text-white {
+    color: white;
+  }
+
+  .text-black {
+    color: black;
+  }
+
+  // Hover utilities
+  @each $color-name, $scale in COL.$colors {
+    @each $shade, $value in $scale {
+      .hover\:bg-#{$color-name}-#{$shade}:hover {
+        background-color: var(--#{$color-name}-#{$shade});
+      }
+
+      .hover\:text-#{$color-name}-#{$shade}:hover {
+        color: var(--#{$color-name}-#{$shade});
+      }
     }
+  }
 
-    .hover\:text-#{$color-name}-#{$shade}:hover {
-      color: var(--#{$color-name}-#{$shade});
+  @each $color-name, $scale in COL.$colors-primitives {
+    @each $shade, $value in $scale {
+      .hover\:bg-#{$color-name}-#{$shade}:hover {
+        background-color: var(--#{$color-name}-#{$shade});
+      }
+
+      .hover\:text-#{$color-name}-#{$shade}:hover {
+        color: var(--#{$color-name}-#{$shade});
+      }
     }
   }
 }
