--- a/src/styles/utilities/_opacity.scss
+++ b/src/styles/utilities/_opacity.scss
@@ -71,52 +71,58 @@
  * @see transitions
  */
 
-// Opacity Utilities
-@each $i in $percentages {
-  .opacity-#{$i} {
-    opacity: math.div($i, 100);
-  }
-  .hover\:opacity-#{$i}:hover {
-    opacity: math.div($i, 100);
-  }
-  .focus\:opacity-#{$i}:focus {
-    opacity: math.div($i, 100);
-  }
-  .active\:opacity-#{$i}:active {
-    opacity: math.div($i, 100);
-  }
-  .group:hover .group-hover\:opacity-#{$i} {
-    opacity: math.div($i, 100);
-  }
+@mixin opacity($value) {
+  opacity: math.div($value, 100);
 }
 
-// Responsive Variants for Opacity
-@each $breakpoint, $width in $breakpoints {
-  @media (min-width: #{$width}) {
-    @each $i in $percentages {
-      .opacity-#{$i}\@#{$breakpoint} {
-        opacity: math.div($i, 100);
-      }
-      .hover\:opacity-#{$i}\@#{$breakpoint}:hover {
-        opacity: math.div($i, 100);
-      }
-      .focus\:opacity-#{$i}\@#{$breakpoint}:focus {
-        opacity: math.div($i, 100);
-      }
-      .active\:opacity-#{$i}\@#{$breakpoint}:active {
-        opacity: math.div($i, 100);
-      }
-      .group:hover .group-hover\:opacity-#{$i}\@#{$breakpoint} {
-        opacity: math.div($i, 100);
+@if $generate-utility-classes {
+  // Opacity Utilities
+  @each $i in $percentages {
+    .opacity-#{$i} {
+      @include opacity ($i);
+    }
+    .hover\:opacity-#{$i}:hover {
+      @include opacity ($i);
+    }
+    .focus\:opacity-#{$i}:focus {
+      @include opacity ($i);
+    }
+    .active\:opacity-#{$i}:active {
+      @include opacity ($i);
+    }
+    .group:hover .group-hover\:opacity-#{$i} {
+      @include opacity ($i);
+    }
+  }
+
+  // Responsive Variants for Opacity
+  @each $breakpoint, $width in $breakpoints {
+    @media (min-width: #{$width}) {
+      @each $i in $percentages {
+        .opacity-#{$i}\@#{$breakpoint} {
+          @include opacity ($i);
+        }
+        .hover\:opacity-#{$i}\@#{$breakpoint}:hover {
+          @include opacity ($i);
+        }
+        .focus\:opacity-#{$i}\@#{$breakpoint}:focus {
+          @include opacity ($i);
+        }
+        .active\:opacity-#{$i}\@#{$breakpoint}:active {
+          @include opacity ($i);
+        }
+        .group:hover .group-hover\:opacity-#{$i}\@#{$breakpoint} {
+          @include opacity ($i);
+        }
       }
     }
   }
-}
 
-// Transition Opacity
-// TODO move to transitons may be?
-.transition-opacity {
-  transition-property: opacity;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+  // Transition Opacity
+  // TODO move to transitons may be?
+  .transition-opacity {
+    transition-property: opacity;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+  }
 }
