--- a/src/styles/utilities/_transitions.scss
+++ b/src/styles/utilities/_transitions.scss
@@ -42,18 +42,13 @@
   transition-delay: $time;
 }
 
-// Base transition
-.transition {
-  @include transition;
-}
-
-// Property-specific transitions
-.transition-none { @include transition-none; }
-.transition-all { @include transition-all; }
-.transition-colors { @include transition-colors; }
-.transition-opacity { @include transition-opacity; }
-.transition-shadow { @include transition-shadow; }
-.transition-transform { @include transition-transform; }
+// Timing functions
+$timing-functions: (
+  'linear': linear,
+  'in': cubic-bezier(0.4, 0, 1, 1),
+  'out': cubic-bezier(0, 0, 0.2, 1),
+  'in-out': cubic-bezier(0.4, 0, 0.2, 1),
+);
 
 // Durations
 $durations: (
@@ -68,31 +63,6 @@ $durations: (
   '1000': 1000ms,
 );
 
-@each $name, $value in $durations {
-  .duration-#{$name} {
-    @include duration($value);
-  }
-}
-
-// Timing functions
-$timing-functions: (
-  'linear': linear,
-  'in': cubic-bezier(0.4, 0, 1, 1),
-  'out': cubic-bezier(0, 0, 0.2, 1),
-  'in-out': cubic-bezier(0.4, 0, 0.2, 1),
-);
-
-@each $name, $value in $timing-functions {
-  .ease-#{$name} {
-    transition-timing-function: $value;
-  }
-}
-
-// Specific timing function classes
-.ease-linear { @include ease-linear; }
-.ease-in { @include ease-in; }
-.ease-out { @include ease-out; }
-.ease-in-out { @include ease-in-out; }
 
 // Delays
 $delays: (
@@ -107,45 +77,79 @@ $delays: (
   '1000': 1000ms,
 );
 
-@each $name, $value in $delays {
-  .delay-#{$name} {
-    @include delay($value);
-  }
-}
 
-// Responsive variants
-@each $breakpoint, $width in $breakpoints {
-  @media (min-width: #{$width}) {
-    // Base transition
-    .transition\@#{$breakpoint} {
-      @include transition;
+@if $generate-utility-classes {
+  // Base transition
+  .transition {
+    @include transition;
+  }
+
+  // Property-specific transitions
+  .transition-none { @include transition-none; }
+  .transition-all { @include transition-all; }
+  .transition-colors { @include transition-colors; }
+  .transition-opacity { @include transition-opacity; }
+  .transition-shadow { @include transition-shadow; }
+  .transition-transform { @include transition-transform; }
+
+  @each $name, $value in $durations {
+    .duration-#{$name} {
+      @include duration($value);
     }
-    
-    // Property-specific transitions
-    .transition-none\@#{$breakpoint} { @include transition-none; }
-    .transition-all\@#{$breakpoint} { @include transition-all; }
-    .transition-colors\@#{$breakpoint} { @include transition-colors; }
-    .transition-opacity\@#{$breakpoint} { @include transition-opacity; }
-    .transition-shadow\@#{$breakpoint} { @include transition-shadow; }
-    .transition-transform\@#{$breakpoint} { @include transition-transform; }
-    
-    // Duration responsive variants
-    @each $name, $value in $durations {
-      .duration-#{$name}\@#{$breakpoint} {
-        @include duration($value);
+  }
+
+  @each $name, $value in $timing-functions {
+    .ease-#{$name} {
+      transition-timing-function: $value;
+    }
+  }
+
+  // Specific timing function classes
+  .ease-linear { @include ease-linear; }
+  .ease-in { @include ease-in; }
+  .ease-out { @include ease-out; }
+  .ease-in-out { @include ease-in-out; }
+
+  @each $name, $value in $delays {
+    .delay-#{$name} {
+      @include delay($value);
+    }
+  }
+
+  // Responsive variants
+  @each $breakpoint, $width in $breakpoints {
+    @media (min-width: #{$width}) {
+      // Base transition
+      .transition\@#{$breakpoint} {
+        @include transition;
       }
-    }
-    
-    // Timing function responsive variants
-    .ease-linear\@#{$breakpoint} { @include ease-linear; }
-    .ease-in\@#{$breakpoint} { @include ease-in; }
-    .ease-out\@#{$breakpoint} { @include ease-out; }
-    .ease-in-out\@#{$breakpoint} { @include ease-in-out; }
-    
-    // Delay responsive variants
-    @each $name, $value in $delays {
-      .delay-#{$name}\@#{$breakpoint} {
-        @include delay($value);
+      
+      // Property-specific transitions
+      .transition-none\@#{$breakpoint} { @include transition-none; }
+      .transition-all\@#{$breakpoint} { @include transition-all; }
+      .transition-colors\@#{$breakpoint} { @include transition-colors; }
+      .transition-opacity\@#{$breakpoint} { @include transition-opacity; }
+      .transition-shadow\@#{$breakpoint} { @include transition-shadow; }
+      .transition-transform\@#{$breakpoint} { @include transition-transform; }
+      
+      // Duration responsive variants
+      @each $name, $value in $durations {
+        .duration-#{$name}\@#{$breakpoint} {
+          @include duration($value);
+        }
+      }
+      
+      // Timing function responsive variants
+      .ease-linear\@#{$breakpoint} { @include ease-linear; }
+      .ease-in\@#{$breakpoint} { @include ease-in; }
+      .ease-out\@#{$breakpoint} { @include ease-out; }
+      .ease-in-out\@#{$breakpoint} { @include ease-in-out; }
+      
+      // Delay responsive variants
+      @each $name, $value in $delays {
+        .delay-#{$name}\@#{$breakpoint} {
+          @include delay($value);
+        }
       }
     }
   }
